--- a/eksamens_projekt_2025/css/style.css
+++ b/eksamens_projekt_2025/css/style.css
@@ -32,7 +32,7 @@ body {
   inset: auto 0 0 0;
   width: 100%;
   height: 100%;
-  background: url(../img/background.png);
+  background: url(../images/forside/background.png);
   background-size: 100vw auto;
   overflow: hidden;
   background-position: center bottom;
