--- a/css/facts.css
+++ b/css/facts.css
@@ -39,6 +39,38 @@ body {
   background-repeat: no-repeat;
 }
 
+.image-button {
+  position: relative;
+  display: inline-flex;
+  top: 2%;
+  left: 30%;
+  flex-direction: column;
+  align-items: center;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  transition: transform 0.3s ease;
+  z-index: 100;
+}
+
+.image-button img {
+  max-width: 30%;
+  height: auto;
+}
+
+.image-button span {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+  font-weight: bold;
+  font-size: 40px;
+  max-width: 20%;
+}
+
 .image-skattekiste {
   position: absolute;
   width: 20px; /* gør kisten mindre */
