--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body {
   background-size: 100vw auto;
   overflow: hidden;
   background-position: center bottom;
+  background-repeat: no-repeat;
 }
 
 .image-button {
