--- a/css/spil.css
+++ b/css/spil.css
@@ -18,20 +18,6 @@ body {
   box-sizing: border-box;
 }
 
-/* Tilbage knappen */
-#tilbage {
-  position: absolute;
-  top: 30px;
-  left: 30px;
-  cursor: pointer;
-  z-index: 1000;
-  transition: transform 0.3s ease;
-}
-
-#tilbage:hover {
-  transform: scale(1.05);
-}
-
 #dodger {
   width: 100px;
   height: 100px;
@@ -49,14 +35,26 @@ body {
   background-position: center; /* centrer baggrunden */
 }
 
+/* Tilbage knappen */
+#tilbage {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  cursor: pointer;
+  z-index: 1000;
+  transition: transform 0.3s ease;
+}
+
+#tilbage:hover {
+  transform: scale(1.05);
+}
+
+/* Mønternes størrelse */
 .collectible {
   position: absolute;
   width: 32px;
   height: 32px;
-  pointer-events: none;
   z-index: 100;
-  top: -40px;
-  left: 0px;
 }
 
 #hud {
@@ -69,43 +67,4 @@ body {
   font-weight: 600;
   font-size: x-large;
   z-index: 1000;
-}
-
-#start {
-  color: white;
-  font-size: 4rem;
-  position: relative;
-  text-decoration: none;
-  top: 4rem;
-}
-
-.rock {
-  width: 20px;
-  height: 20px;
-  background: tan;
-  position: absolute;
-}
-
-.rock:before {
-  content: "";
-  border-bottom: 6px solid tan;
-  border-left: 6px solid #111;
-  border-right: 6px solid #111;
-  height: 0;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 9px;
-}
-
-.rock:after {
-  content: "";
-  border-left: 6px solid #111;
-  border-right: 6px solid #111;
-  border-top: 6px solid tan;
-  bottom: 0;
-  height: 0;
-  left: 0;
-  position: absolute;
-  width: 9px;
 }
