--- a/css/spil.css
+++ b/css/spil.css
@@ -49,7 +49,7 @@ body {
   transform: scale(1.05);
 }
 
-/* Mønternes størrelse */
+/* Mønterne */
 .collectible {
   position: absolute;
   width: 32px;
@@ -57,6 +57,7 @@ body {
   z-index: 100;
 }
 
+/* Point display der viser hvor mange mønter man har samlet */
 #hud {
   position: fixed;
   top: 30px;
