--- a/css/spil.css
+++ b/css/spil.css
@@ -25,7 +25,7 @@ body {
 }
 
 #game {
-  background-image: url(../images/spil/background.svg);
+  background-image: url(./images/spil/background.svg);
   /* fylder hele viewport uden scroll og uden hvide kanter */
   width: 100%;
   height: 100%;
